<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:text="@string/camar_de_fotos"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="463dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/buttonTakePicture"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#33828C"
        android:text="@string/tomar_foto" />

    <Button
        android:id="@+id/buttonSavePicture"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#B85334"
        android:text="@string/guardar_foto" />

</LinearLayout>
