<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Fila 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <!-- Columna 1 -->
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/persona"
            android:contentDescription="@string/imagen_de_perfil"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_vertical" />

        <!-- Columna 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_persona"
            android:textSize="18sp"
            android:gravity="center_vertical" />
    </LinearLayout>

    <!-- Fila 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <!-- Columna 1 -->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/acepta"
            android:backgroundTint="@android:color/holo_green_light"
            android:textColor="@android:color/white" />

        <!-- Columna 2 -->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancela"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- Fila 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <!-- Columna 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/columna1"
            android:textSize="16sp"
            android:layout_gravity="center_vertical" />

        <!-- Columna 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/columna2"
            android:textSize="16sp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</LinearLayout>
