<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/formulario"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombres"
            android:inputType="textPersonName"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbHombre"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/hombre"
            android:textColor="@color/primary_text" />

        <CheckBox
            android:id="@+id/cbMujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mujer"
            android:textColor="@color/primary_text" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelefono1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_fono_1"
            android:inputType="phone"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelefono2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_fono_2"
            android:inputType="phone"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnviar"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/enviar"
        android:textColor="@color/button_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/datos_se_mostraran_aqui" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="363dp"
        android:layout_height="116dp"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="@color/primary_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegresar"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/regresarform"
        android:textColor="@color/button_text" />
</LinearLayout>
