<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".PodometroActivity">

    <!-- Encabezado -->
    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encabezado_conteo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black" />

    <!-- Botón para iniciar/detener el conteo -->
    <Button
        android:id="@+id/buttonCountSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#66BC6A"
        android:text="@string/iniciar_con" />

    <!-- Campo para mostrar el conteo de pasos -->
    <TextView
        android:id="@+id/textViewSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pasoss"
        android:textColor="#447C83" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D92828"
        android:text="@string/regresarpod" />

</LinearLayout>
