<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#f7f7f7">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/ubicaci_n_gps"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/ubicaci_n_no_obtenida"
        android:textColor="#333333"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/obtener_ubicaci_n_gps"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonRegresar"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2196F3"
        android:padding="16dp"
        android:text="@string/regreso"
        android:textColor="#ffffff" />

</LinearLayout>
